# Brinkmanship

./: .gitignore  AI_RULES.md  ARCHITECT_MANIFESTO.md  CHANGELOG.md  PRD_MASTER.md  PROJECT_MANIFESTO.md  SCENARIO_CREATION_GUIDE.md  build_app.ps1  dev.ps1  dev_rust.ps1  replace_sourdough.py  types.ts  update_assets.py
Brinkmanship split/: 00_CORE_PRD.md  01_SETUP_GUIDE.md  07_CHRONOS_CALENDAR.md  AGENTS.md  FUTURE_WORK_DLC.md
api/: main.py
artifacts/: 3.1.3 - 22implementation_plan.md  ENGINE_POST_MORTEM_MGMT.md.resolved  FUTURE_WORKS.md.resolved  LOCAL_TESTING_GUIDE.md.resolved  MULTI_AGENT_STRESS_TEST_PLAN.md.resolved  PHASE_14_OVERHAUL.md.resolved  SOVEREIGN_DISPATCH_V1.md.resolved  SOVEREIGN_DISPATCH_V10.md.resolved  SOVEREIGN_DISPATCH_V11.md.resolved  SOVEREIGN_DISPATCH_V12.md.resolved  SOVEREIGN_DISPATCH_V13_MANAGEMENT_BRIEF.md.resolved  SOVEREIGN_DISPATCH_V14_THE_ESTATE_ASCENDANCY.md  SOVEREIGN_DISPATCH_V15_THE_STRUCTURAL_MATRIX.md  SOVEREIGN_DISPATCH_V16.md.resolved  SOVEREIGN_DISPATCH_V17.md.resolved  SOVEREIGN_DISPATCH_V18.md  SOVEREIGN_DISPATCH_V2.md.resolved  SOVEREIGN_DISPATCH_V3.md.resolved  SOVEREIGN_DISPATCH_V8.md.resolved  SOVEREIGN_DISPATCH_V9.md.resolved  Sovereign Flavor Matrix Explained.csv  (+14 more)
brinkmanship_engine/: .gitignore  Cargo.toml  build_log.txt  build_log_utf8.txt
brinkmanship_engine/benchmarks/: stress_test_v1.csv  stress_test_v2.csv
brinkmanship_engine/src/: ai_director_stress.rs  chronos.rs  event_chain.rs  ideology_matrix.rs  lib.rs  main.rs  reactor.rs  scenario.rs  state.rs
brinkmanship_engine/tests/: journey_tests.rs
(+74 files in other folders)
