[package]
name = "brinkmanship_engine"
version = "0.1.0"
edition = "2021"
authors = ["Antigravity"]
description = "High-performance Sovereign Simulation Engine (Rust Port)"

[dependencies]
# Async Runtime & Web Framework
tokio = { version = "1.0", features = ["full"] }
axum = "0.7.0"

# Serialization bridge to React UI
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random Number Generation for Gaussian Simulation Event Calculus
rand = "0.8"
rand_distr = "0.4"

# Identity Management
uuid = { version = "1.0", features = ["v4", "serde"] }

# Immutable & Structurally Shared Collections for O(1) cloning
im = { version = "15.1", features = ["serde"] }

# HTTP Utilities for Axum
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde_with = "3.0"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
